--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -43,7 +43,7 @@
                         interned at <strong>{{response.company}}</strong>
                       </p>
 
-                      <button
+                      <a
                         type="button"
                         class="
                           btn btn-sm btn-outline-secondary
@@ -51,9 +51,10 @@
                           w-100
                           text-center
                         "
+                        href="{% url 'post' %}"
                       >
                         Read More
-                      </button>
+                      </a>
                     </div>
                   </div>
                 </div>
