--- a/backend/templates/filter.html
+++ b/backend/templates/filter.html
@@ -60,7 +60,7 @@
         autocomplete="on" required name="filter" />
       <!-- <input name="company" autocomplete="on" list="suggestions" required /> -->
       <small>Enter a company name to filter or Your CGPA to know companies, you are eligible for.</small>
-      <input class="btn view-btn" type="submit" value="filter" />
+      <input class="btn view-btn" type="submit" value="Search" />
     </div>
   </form>
 
