--- a/backend/templates/write.html
+++ b/backend/templates/write.html
@@ -74,7 +74,7 @@
 </style>
 
 <div class="card mt-5" style="max-width: 80%; margin: 20px auto;">
-    <div class="card-body justify-content-center">
+    <div class="card-body justify-content-center main-body">
         <h2 class="card-title text-center mb-4 mt-2">Fill the Form Below</h2>
         <form action="" method="POST">
             {% csrf_token %}
