--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -114,7 +114,7 @@
                 interned at <strong>{{response.company}}</strong>
               </p>
 
-              <button
+              <a href="{% url  'post' %}" 
                 type="button"
                 class="
                   btn btn-sm btn-outline-secondary
@@ -123,7 +123,7 @@
                   text-center
                 ">
                 View
-              </button>
+              </a>
             </div>
           </div>
         </div>
