New Changes Done

--- a/backend/templates/experience.html
+++ b/backend/templates/experience.html
@@ -51,7 +51,7 @@
                           w-100
                           text-center
                         "
-                        href="{% url 'post' %}"
+                        href="{% url 'post' response.pk %}"
                       >
                         Read More
                       </a>
