--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -65,34 +65,6 @@
       </a>
     </div>
   </section>
-    
-  <!-- <div class="album py-5 bg-lime-invert">
-    <div class="container">
-      <h1 class="mb-4"><div class="head p-2">Latest Interview Experiences</div>
-      </h1>
-      <div class="row">
-        {% for response in responses %}
-        <div class="col-md-4">
-          <div class="card mb-4 box-shadow">
-            <div class="card-body p-5">
-              <p class="card-text">
-                {{response.summary}} - {{response.name}}
-              </p>
-              <div class="d-flex justify-content-center align-items-center mt-4">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                </div>
-              </div>
-              
-              <small class="text-muted" style="float:right">9 mins</small>
-            </div>
-          </div>
-        </div>          
-        {% endfor %}
-      </div>
-    </div>
-  </div> -->
-
     <div class="album py-5 bg-lime-invert">
     <div class="container">
       <h1 class="mb-4">
@@ -109,12 +81,14 @@
               >
                 {{response.summary }}
               </p>
-              <p class="card-text name">{{response.name}}</p>
+              <p class="card-text name">
+                <a href="{% url 'profile' response.user.username %}">{{response.name}}</a>
+              </p>
               <p class="card-text company capitalize">
                 interned at <strong>{{response.company}}</strong>
               </p>
 
-              <a href="{% url  'post' %}" 
+              <a href="{% url  'post' response.pk %}" 
                 type="button"
                 class="
                   btn btn-sm btn-outline-secondary
@@ -133,4 +107,3 @@
   </div>
 </main>
 {% endblock content %}
-
