--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -27,6 +27,75 @@
     .blog-text {
         margin-bottom: 20px;
     }
+      .popup {
+        position: fixed;
+        padding: 10px;
+        max-width: 500px;
+        border-radius: 10px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        background: rgba(255,255,255,.9);
+        visibility: hidden;
+        opacity: 0;
+        /* "delay" the visibility transition */
+        -webkit-transition: opacity .5s, visibility 0s linear .5s;
+        transition: opacity .5s, visibility 0s linear .5s;
+        z-index: 1;
+      }
+      .popup:target {
+        visibility: visible;
+        opacity: 1;
+        /* cancel visibility transition delay */
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+      }
+      .popup-close {
+        position: absolute;
+        padding: 10px;
+        max-width: 500px;
+        border-radius: 10px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        background: rgba(255,255,255,.9);
+      }
+      .popup .close {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        padding: 5px;
+        color: #000;
+        transition: color .3s;
+        font-size: 2em;
+        line-height: .6em;
+        font-weight: bold;
+      }
+      .popup .close:hover {
+        color: #00E5EE;
+      }
+      
+      .close-popup {
+        background: rgba(0,0,0,.7);
+        cursor: default;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0;
+        visibility: hidden;
+        /* "delay" the visibility transition */
+        -webkit-transition: opacity .5s, visibility 0s linear .5s;
+        transition: opacity .5s, visibility 0s linear .5s;
+      }
+      .popup:target + .close-popup{  
+        opacity: 1;
+        visibility: visible;
+        /* cancel visibility transition delay */
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+      }
 </style>
 
 <div class="container-fluid" style="font-family: 'Poppins', sans-serif">
@@ -35,48 +104,47 @@
             <div class="card post-card mt-4">
                 <div class="card-body">
                     <h5 class="card-title">User Profile</h5>
-                    <p class="abt-info-title"><strong>Name: </strong>{{ request.user.first_name }} {{ request.user.last_name }}</p>
-                    <p class="abt-info-title"><strong>Email: </strong>sample@email.com</p>
-                    <p class="abt-info-title"><strong>Username: </strong>user1234</p>
-                    <p class="abt-info-title"><strong>Posts: </strong>2</p>
+                    <p class="abt-info-title"><strong>Name: </strong>{{ user.first_name }} {{ user.last_name }}</p>
+                    <p class="abt-info-title"><strong>Email: </strong>{{ user.username }} @student.nitw.ac.in</p>
+                    <p class="abt-info-title"><strong>Username: </strong>{{ user.username }}</p>
+                    <p class="abt-info-title"><strong>Posts: </strong>{{count}}</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-9">
-        <div class="row">
-            <div class="col">
-                <div class="card post-card mt-4">
-                    <div class="card-body">
-                        <h4 class="card-title">Post 1</h4>
-                        <p class="card-text blog-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-                            error nisi at quibusdam dolores recusandae consectetur, voluptates
-                            sit labore, vitae laudantium inventore exercitationem a pariatur
-                            sunt, architecto blanditiis esse quae.
-                        </p>
-                        <button type="button" class="btn btn-outline-primary">View</button>
-                        <button type="button" class="btn btn-outline-success">Edit</button>
+        {% for post in posts %}
+            <div class="row">
+                <div class="col">
+                    <div class="card post-card mt-4">
+                        <div class="card-body">
+                            <h4 class="card-title">Post {{ forloop.counter }}</h4>
+                            <h6>Company : {{ post.company }}</h6>
+                            <h6>Eligible Branches : {{ post.branch }}</h6>
+                            <h6>CGPA cut-off : {{ post.cgpa_cutoff }}</h6>
+                            <p class="card-text blog-text">
+                                {{ post.summary }}
+                            </p>
+                            <a type="button" class="btn btn-outline-primary" href="{% url 'post' post.pk %}">View</a>
+                            {% if is_current_user %}
+                                <a href="{% url 'edit' post.pk %}" class="btn btn-outline-success">Edit</a>
+                                <a href="#popup1" class="btn btn-outline-danger">Delete</a>
+                                <div id="popup1" class="popup bg-secondary p-5 text-light" style="border:5px black solid;border-radius:50px">
+                                    <h2>Are you Sure?</h2>
+                                    <p>You won't be able to recover this later!!!</p>
+                                    <div class="btn-group" role="group" aria-label="Basic example">
+                                        <a href="#" class="btn btn-success">No</a>
+                                        <a href="{% url 'delete' post.pk %}" class="btn btn-danger">Yes</a>
+                                      </div>
+                                  </div>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card post-card mt-4">
-                    <div class="card-body">
-                        <h4 class="card-title">Post 2</h4>
-                        <p class="card-text blog-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-                            error nisi at quibusdam dolores recusandae consectetur, voluptates
-                            sit labore, vitae laudantium inventore exercitationem a pariatur
-                            sunt, architecto blanditiis esse quae.
-                        </p>
-                        <button type="button" class="btn btn-outline-primary">View</button>
-                        <button type="button" class="btn btn-outline-success">Edit</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
             
         </div>
+        }
     </div>
 </div>
 {% endblock content %}
